[project]
name = "context-sensitive-spelling-correction"
version = "0.1.0"
description = "NLP 🔠 Context-Sensitive Spelling Correction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.3.2",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.10.0",
    "nltk>=3.9.1",
    "tqdm>=4.67.1",
]
